feat(lean): sobe platform-iceberg LAKEHOUSE completo (MinIO+Polaris+Trino)
Control-plane FastAPI + data-stack Apache Iceberg, numa rede dedicada iceberg-net:
minio (S3) -> polaris (REST catalog, in-memory) -> trino 465 (SQL). API+MCP tb no platform-local.
Validado end-to-end: SELECT COUNT(*) tenant_lab_s3.gold.clientes=10 (Trino->Polaris->MinIO->Iceberg);
seed clientes=10/produtos=15/pedidos=10000.

Aprendizados documentados M1-M4:
- M1 Polaris relational-jdbc -> 500 (falta bootstrap) -> in-memory (auto-bootstrap; hml-init idempotente)
- M2 Trino vs OAuth props: Polaris EXIGE scope PRINCIPAL_ROLE:ALL; trino 446 nao suporta scope;
  465 suporta scope+server-uri mas NAO token-refresh-enabled (removida)
- M3 trino 465 restart: jvm.config ao montar /etc/trino precisa das flags do 465 (-Djava.security.manager=allow)
  + -Xmx2G fixo + mem_limit 3g
- M4 MCP adiado: iceberg_mcp so local (nao em develop) + imagem sem mcp/fastmcp -> tarefa

Bundle: docker-compose.yml, trino/etc (config+jvm.config), trino/catalog (creds via ${ENV:}),
scripts/hml_init.py, iceberg_mcp/ (p/ quando houver imagem). Segredos ICEBERG_* on-box.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>